--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p>Gestão estratégica é o conjunto de práticas e objetivos definidos pelos principais gestores de uma empresa, levando em consideração os ambientes interno e externo da companhia. Além de determinar os principais objetivos de uma organização em determinado período de tempo, os executivos também são responsáveis por definir como esses objetivos serão alcançados e alocar recursos para que as metas se concretizem.</p>
                     </div>
                     <div class="botao_tabela">
-                        <input type="button" value="Detalhes">
+                        <input class = "input" type="button" value="Detalhes">
                     </div>
                 </div>
                 <div class="tabelaSecundaria">
@@ -64,7 +64,7 @@
                             <p>Consiste na gestão de ciclo que vai desde a estruturação dos processos de produção até as etapas finais com o cliente. É por meio do processo de gestão – sempre seguindo propósitos, princípios e valores pré-estabelecidos – que um empreendimento alcança seus objetivos e metas.</p>
                         </div>
                         <div class="botao_tabela">
-                            <input type="button" value="Detalhes">
+                            <input class = "input" type="button" value="Detalhes">
                     </div>
                 </div>
                 <div class="tabelaSecundaria">
@@ -76,7 +76,7 @@
                         <p>Gestão financeira empresarial é todo controle, administração, acompanhamento e planejamento das finanças de um negócio. Possui como principal objetivo a maximização dos resultados, ou seja, dos lucros. Para isso, utiliza de processos, métodos, ferramentas e padronização para alcançar melhores resultados financeiros.</p>
                     </div>
                     <div class="botao_tabela">
-                        <input type="button" value="Detalhes">
+                        <input class = "input" type="button" value="Detalhes">
                     </div>
                 </div>
                 <div class="tabelaSecundaria">
@@ -88,7 +88,7 @@
                         <p>Consiste-se em um serviço completo, desenvolvido a partir das necessidades de cada cliente, onde ele buscar impulsionar e impactar de forma direta e/ou indireta, todas os setores da empresa.</p>
                     </div>
                     <div class="botao_tabela">
-                        <input type="button" value="Detalhes">
+                        <input class = "input" type="button" value="Detalhes">
                     </div>
                 </div>           
             </section>
