--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
                     </div>
                     <div class="campos_cadastro">
                         <span class="span_cadastro">Telefone</span>
-                        <input class="input_cadastro" type="text">
+                        <input class="input_cadastro" type="tel">
                     </div>
                     <div class="campos_cadastro">
                         <span class="span_cadastro">Email</span>
-                        <input class="input_cadastro" type="text">
+                        <input class="input_cadastro" type="email">
                     </div>
                     <div class="campos_cadastro">
                         <span class="span_cadastro">UF</span>
